[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Eminent_Hearers.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/EminentHearers.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 23.0
margin_right = 802.0
margin_bottom = 333.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
margin_left = 151.0
margin_right = 651.0
margin_bottom = 343.0
rect_min_size = Vector2( 500, 300 )
custom_constants/separation = 39
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="CheckButton" parent="CenterContainer/VBoxContainer2"]
margin_right = 500.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CheckButton" parent="CenterContainer/VBoxContainer2"]
margin_top = 91.0
margin_right = 500.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "Backgrounds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2"]
margin_top = 182.0
margin_right = 500.0
margin_bottom = 343.0
custom_constants/separation = 23
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
margin_right = 500.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "VOLUME"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
margin_top = 74.0
margin_right = 500.0
margin_bottom = 106.0
custom_constants/separation = 135
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 108.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Music "

[node name="Music" type="HSlider" parent="CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 243.0
margin_right = 499.0
margin_bottom = 32.0
rect_min_size = Vector2( 256, 32 )
max_value = 1.0
step = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
margin_top = 129.0
margin_right = 500.0
margin_bottom = 161.0
custom_constants/separation = 190
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 54.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "SFX"

[node name="SFX" type="HSlider" parent="CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 244.0
margin_right = 500.0
margin_bottom = 32.0
rect_min_size = Vector2( 256, 32 )
max_value = 1.0
step = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 4.0
margin_top = 389.0
margin_right = 128.0
margin_bottom = 446.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_left = 487.0
margin_top = 368.0
margin_right = 795.0
margin_bottom = 447.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_right = 308.0
margin_bottom = 79.0

[node name="Label" type="Label" parent="CenterContainer2/VBoxContainer"]
margin_right = 308.0
margin_bottom = 27.0
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 3 )
text = "Background Colors"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer2/VBoxContainer"]
margin_top = 31.0
margin_right = 308.0
margin_bottom = 79.0

[node name="Reset" type="Button" parent="CenterContainer2/VBoxContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
text = "Reset"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CenterContainer2/VBoxContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
edit_alpha = false

[node name="ColorPickerButton2" type="ColorPickerButton" parent="CenterContainer2/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
edit_alpha = false

[node name="ColorPickerButton3" type="ColorPickerButton" parent="CenterContainer2/VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
edit_alpha = false

[node name="ColorPickerButton4" type="ColorPickerButton" parent="CenterContainer2/VBoxContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 256.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
edit_alpha = false

[node name="ColorPickerButton5" type="ColorPickerButton" parent="CenterContainer2/VBoxContainer/HBoxContainer"]
margin_left = 260.0
margin_right = 308.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
edit_alpha = false

[connection signal="toggled" from="CenterContainer/VBoxContainer2/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="CenterContainer/VBoxContainer2/Background" to="." method="_on_Background_toggled"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
